# Padelpro

./: .gitignore  CLAUDE.md  Dockerfile  LICENSES.md  README.md  config.py  pyproject.toml  render.yaml  requirements.txt
api/: db.py  gemini_analysis.py  main.py  models.py  streaming.py
api/routers/: analytics.py  annotate.py  calibrate.py  clips.py  condense.py  label.py  matches.py  quality.py  report.py  review.py  training.py
dashboard/: .env.local.example  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
docs/: DEPLOY.md  EVALUATION.md  RESOURCES.md
modal_app/: README.md  app.py
padelpro_vision/: __init__.py  pipeline.py
padelpro_vision/analysis/: __init__.py  (+6 more)
scripts/: ab_compare.py  analyze_clip.py  calibrate_court.py  colher_treino.py  convert_padeltracker100.py  download_model_weights.py  evaluate.py  extract_hit_clips.py  harvest_pose_from_clips.py  publicar_para_teste.ps1  query_clips.py  repor_api_render.ps1  run_local_api.ps1  run_match.py  scan_formacao.py  set_api_url.ps1  testar_audio.py  testar_classificar.py  testar_gemini.py  testar_motor.py  testar_servico.py  testar_servico_ia.py  testar_servico_pos.py  train_from_padeltracker100.sh  train_stroke_classifier.py
tests/: test_access_code.py  test_auto_calibration.py  test_clip_strokes.py  test_delete_match.py  test_evaluation.py  test_gemini_match_and_training.py  test_label.py  test_quality_and_fusion.py  test_quality_endpoint.py  test_reid.py  test_retry.py  test_review_feedback.py  test_shot_detector.py  test_smoke.py  test_training_e2e.py
(+109 files in other folders)
