[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "padelpro-vision"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
detection = ["openmim>=0.3", "mmcv>=2.1", "mmdet>=3.3"]
pose      = ["mmpose>=1.3"]
backend   = ["supabase>=2.3", "fastapi>=0.110", "uvicorn>=0.29"]
dev       = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["padelpro_vision"]

[tool.pytest.ini_options]
testpaths = ["tests"]
